// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Snapshots All 1`] = `
<ol
  className="sc-AxirZ hryhsZ className"
>
  <li>
    Test
  </li>
  <li>
    Test2
  </li>
</ol>
`;

exports[`List Snapshots No props 1`] = `
<ul
  className="sc-AxjAm bKPZbO"
>
  <li>
    Test
  </li>
  <li>
    Test2
  </li>
</ul>
`;

exports[`List Snapshots className 1`] = `
<ul
  className="sc-AxjAm bKPZbO className"
>
  <li>
    Test
  </li>
  <li>
    Test2
  </li>
</ul>
`;

exports[`List Snapshots ordered 1`] = `
<ol
  className="sc-AxirZ hryhsZ"
>
  <li>
    Test
  </li>
  <li>
    Test2
  </li>
</ol>
`;
